[tool.poetry]
name = "bcn"
version = "0.1.0"
description = ""
authors = ["arahangua <arahangua@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.54"
numpy = "^1.26.4"
pandas = "^2.2.1"
parmap = "^1.7.0"
joblib = "^1.3.2"
networkit = "^11.0"
networkx = "^3.2.1"
cdlib = "^0.3.0"
scikit-learn = "^1.4.1.post1"
scipy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
